--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # Auto detect text files and perform LF normalization
-* text=auto
-* .R linguist-detectable= true
-* .html linguist-detectable =false
+
+*.R linguist-detectable=true
+*.html linguist-detectable=false
+
